I08-374 Update polarisation scan as per information from beamline
The previous version was very provisional, just to get the elements in
place, so it is probably best to review this version as a whole, not as
a change to the previous one.

Change-Id: I710a0a1721375d07f30775d56644e5ddcb310063